--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Roboto:wght@300&display=swap');
+
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -6,7 +8,9 @@ nav a{
     text-align: center;
     color: #E1E5F2;
     text-decoration: none;
+    padding: 35px;
 }
+
 #hero-msg h1, #hero-msg h4{
     text-align: center;
 }
@@ -21,6 +25,10 @@ main section{
 }
 body {
     background-color: #E1E5F2; 
+    font-family: 'Roboto', Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color:#1F7A8C;
@@ -30,9 +38,13 @@ nav a:hover {
     color: #5aa9e6;
 }
 .book, .join{
-    background-color: #1F7A8C; 
+    background-color: #5aa9e6; 
     color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 10px;
 }
 .book:hover, .join:hover{
     background-color: white; 
@@ -43,19 +55,35 @@ nav a:hover {
 }
 .msg{
     background-color: #1F7A8C; 
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer{
     background-color: #1F7A8C; 
     color: white ;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 .home-title{
     color: #1F7A8C;
+    font-family: "DM Serif Text", Arial, sans-serif ;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4{
     color: #1F7A8C;
 }
-.msg h2, p{
+h2{
+    margin: 0;
+}
+.msg h2{
     color: white;
+    font-family: "DM Serif Text", Arial, sans-serif ;
+}
+.msg p{
+    color: white;
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 footer a{
     color: white;
@@ -67,8 +95,12 @@ footer a:hover{
 .logo {
     width: 80px;
 }
+#logo link{
+    padding-top: 5px;
+}
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img {
     width: 100%;
@@ -78,4 +110,21 @@ footer p {
 } 
 footer p a:hover {
     text-decoration: underline;
+}
+footer .social img{
+    padding-top: 15px;
+}
+.rivers-card,
+.camping-card,
+.rapids-card {
+    margin: 200px 0;
+}
+.card-img{
+    border: 10px solid #5aa9e6;
+}
+main section img {
+    box-sizing: border-box;
+}
+.mountains{
+    margin: 100px 0 200px 0;
 }
