--- a/personalportfolio/styles/styles.css
+++ b/personalportfolio/styles/styles.css
@@ -14,8 +14,8 @@ Fonts are separated by a | */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "DM Serif Text";
+  --paragraph-font: Open Sans, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #789fb7;  /* headlines on a white background */ 
